[gd_scene load_steps=9 format=3 uid="uid://dua6mynlw2ptw"]

[ext_resource type="Script" uid="uid://bk5ri1yoakaqp" path="res://scenes/game_elements/props/checkpoint/components/checkpoint.gd" id="1_kkoqv"]
[ext_resource type="Script" uid="uid://0enyu5v4ra34" path="res://scenes/game_elements/props/spawn_point/components/spawn_point.gd" id="2_s5d1s"]
[ext_resource type="Texture2D" uid="uid://bnuv2ugjb23ys" path="res://scenes/quests/story_quests/elian/1_stealth/stealth_components/Maquina 1_nivel1.png" id="3_3xcwf"]
[ext_resource type="PackedScene" uid="uid://dutgnbiy7xalb" path="res://scenes/game_elements/props/interact_area/interact_area.tscn" id="4_cukws"]
[ext_resource type="Script" uid="uid://edcifob4jc4s" path="res://scenes/game_logic/talk_behavior.gd" id="5_3xcwf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bjlxs"]
atlas = ExtResource("3_3xcwf")
region = Rect2(0, 0, 96, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_5080t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjlxs")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_3xcwf"]
radius = 48.0

[node name="Checkpoint" type="Area2D"]
collision_layer = 0
script = ExtResource("1_kkoqv")

[node name="SpawnPoint" type="Marker2D" parent="." groups=["spawn_point"]]
unique_name_in_owner = true
script = ExtResource("2_s5d1s")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -40)
sprite_frames = SubResource("SpriteFrames_5080t")

[node name="InteractArea" parent="." instance=ExtResource("4_cukws")]
unique_name_in_owner = true
collision_layer = 0
interact_label_position = Vector2(0, -128)
disabled = true
action = "Admire"

[node name="CollisionShape" type="CollisionShape2D" parent="InteractArea"]
position = Vector2(1, -4)
shape = SubResource("CircleShape2D_3xcwf")
debug_color = Color(0.600391, 0.54335, 0, 0.42)

[node name="TalkBehavior" type="Node" parent="." node_paths=PackedStringArray("interact_area")]
unique_name_in_owner = true
script = ExtResource("5_3xcwf")
interact_area = NodePath("../InteractArea")
metadata/_custom_type_script = "uid://edcifob4jc4s"
